[package]
name = "cgroups"
description = "Native Rust crate for managing control groups on Linux"
repository = "https://github.com/levex/cgroups-rs"
keywords = ["linux", "cgroup", "containers", "isolation"]
categories = ["os", "api-bindings", "os::unix-apis"]
license = "MIT OR Apache-2.0"
version = "0.0.2"
authors = ["Levente Kurusa <lkurusa@acm.org>"]

[dependencies]

[dev-dependencies]
nix = "0.11.0"
libc = "0.2.43"
